samples/_failures_safe/1761404006_868dcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_858526a5.c: In function ‘main’:
./samples/SAFE/__tmp_858526a5.c:149:12: error: expected identifier or ‘(’ at end of input
  149 |     struct Graph *
      |            ^~~~~
./samples/SAFE/__tmp_858526a5.c:149:12: error: expected declaration or statement at end of input
